courses/430_programming-languages/assignment-8/tests/error/error51.nex
deleigh { raspetchatat 3; }
poka (falshiviy ;
